force-app/main/default/objects/Opportunity/fields/HO_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>HO_Loss_Reason__c</fullName>
    <label>HO失注理由</label>
    <description>失注時に選択する失注理由（Closed Lostで必須とする運用ルール）</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>価格</fullName>
            </value>
            <value>
                <fullName>競合</fullName>
            </value>
            <value>
                <fullName>機能不足</fullName>
            </value>
            <value>
                <fullName>予算凍結</fullName>
            </value>
            <value>
                <fullName>タイミング</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>