force-app/main/default/objects/Opportunity/fields/HO_Loss_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>HO_Loss_Reason_Detail__c</fullName>
    <label>HO失注理由詳細</label>
    <description>失注理由の自由記述</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>