force-app/main/default/objects/Opportunity/fields/HO_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>HO_Sales_Rep__c</fullName>
    <label>HO担当営業</label>
    <description>担当営業名（ハンズオン用）</description>
    <type>Text</type>
    <length>40</length>
</CustomField>