force-app/main/default/objects/Opportunity/fields/HO_Workshop_Data__c.field-meta.xml
<CustomField>
    <fullName>HO_Workshop_Data__c</fullName>
    <label>HOハンズオンデータ</label>
    <description>ハンズオン用テストデータであることを示すフラグ</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>